2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that HTTPS download fails.
	* src/AbstractCommand.cc
	* src/AbstractCommand.h
	* src/DownloadCommand.cc
	* src/FtpConnection.cc
	* src/HttpConnection.cc
	* src/HttpRequestCommand.cc
	* src/HttpResponseCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/MSEHandshake.cc
	* src/PeerConnection.cc
	* src/SocketCore.cc
	* src/SocketCore.h

	Fixed the bug that aria2 doesn't download whole content body and cannot
	reuse connection if chunked transfer encoding and gzip content encoding
	are set.
	* src/DownloadCommand.cc
	* src/HttpSkipResponseCommand.cc
	
2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated man page.
	* doc/aria2c.1.txt

2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	When error occurred while aria2 was parsing an .aria2.conf file, print
	the usage of the option that caused error.
	* src/option_processing.cc
	
2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error on OptionHandlerException
	* src/Makefile.am
	* src/OptionHandlerException.cc
	* src/OptionHandlerException.h
	
2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Moved message of the error to OptionHandlerException.h
	* src/NameMatchOptionHandler.h
	* src/OptionHandlerException.h

2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	When error occurs while aria2 is parsing an command-line option, print
	the usage of the option.
	* src/Makefile.am
	* src/NameMatchOptionHandler.h
	* src/OptionHandlerException.h
	* src/option_processing.cc

2008-09-26  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Reverted previous change.
	Insert username+'@' to URI(after ftp://) when URI is FTP scheme and
	username is not in URI.
	* src/HttpRequest.cc
	* src/Request.cc
	* test/HttpRequestTest.cc
	* test/RequestTest.cc

2008-09-25  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
